Conseguido boton fijo en  desplazamiento de scroll

--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
             <h1>Aqui va todo el texto sobre mi y la foto</h1>
         </section>
         <section class="section cv">
-            <h1>CV
-
-            <a href="cv/CV_MaríaSánchezFdez.pdf" download="CV María Sánchez">
-                <button>
-                <p>CV María</p>
-                </button>
-            </a>
-            </h1>
+        <!-- <a href="cv/CV_MaríaSánchezFdez.pdf" download="CV María Sánchez"> -->
+            <div class="izquierda">
+                <p>hola</p>
+            </div>
+            <div class="derecha">
+                <div class="botonWrapper">
+                    <button class="botonDescargar">Descargar cv</button>
+                </div>
+            </div>
         </section>
         
         <section class="section proyectos">
