--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/locomotive-scroll/dist/locomotive-scroll.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanta/0.5.21/vanta.fog.min.js"></script>
+
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
+
     <header>
         <p>Cabecera</p>
     </header>
@@ -36,7 +39,7 @@
             </div>
             <div class="derecha">
                 <div class="botonWrapper">
-                    <button class="botonDescargar">Descargar cv</button>
+                    <button class="botonDescargar" id="descargarCv">Descargar cv</button>
                 </div>
             </div>
         </section>
@@ -51,7 +54,7 @@
             <h1>Redes sociales y demás</h1>
         </footer>
     </div>
-    
+    <script src="./confetti.min.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
