--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-
     <header>
-        <p>Cabecera</p>
+        <p>Cv</p>
+        <p>Proyectos</p>
+        <p>Contacto</p>
     </header>
     <div class="container">
         <section class="section inicio">
@@ -33,13 +34,15 @@
             <h1>Aqui va todo el texto sobre mi y la foto</h1>
         </section>
         <section class="section cv">
-        <!-- <a href="cv/CV_MaríaSánchezFdez.pdf" download="CV María Sánchez"> -->
+        <!--  -->
             <div class="izquierda">
                 <p>hola</p>
             </div>
             <div class="derecha">
                 <div class="botonWrapper">
+                    <a href="cv/CV_MaríaSánchezFdez.pdf" download="CV María Sánchez">
                     <button class="botonDescargar" id="descargarCv">Descargar cv</button>
+                    </a>
                 </div>
             </div>
         </section>
