--- a/index.html
+++ b/index.html
@@ -103,20 +103,40 @@
                                 <img src="./img/Css3.png" alt="CSS3">
                                 <img src="./img/Laravel.png" alt="Laravel">
                                 <img src="./img/php.png" alt="PHP">
+                                <img src="./img/Kotlin.png" alt="Kotlin">
+                                <img src="./img/Swift.png" alt="Swift">
+                                <img src="./img/Java.png" alt="Java">
+                                <img src="./img/React.png" alt="React">
+                                <img src="./img/Bootstrap.png" alt="Bootstrap">
+                                <img src="./img/js.png" alt="JavaScript">
+                                <img src="./img/Html5.png" alt="HTML5">
+                                <img src="./img/Css3.png" alt="CSS3">
+                                <img src="./img/Laravel.png" alt="Laravel">
+                                <img src="./img/php.png" alt="PHP">
                             </div>
                         </div>
                         <div class="sliderImagenesAbajo"> 
                             <div class="slider">
                                 <img src="./img/androids.png" alt="Android">
-                                    <img src="./img/sql.png" alt="SQL">
-                                    <img src="./img/wordpress.png" alt="WordPress">
-                                    <img src="./img/Figma.png" alt="Figma">
-                                    <img src="./img/vst.png" alt="Visual Studio">
-                                    <img src="./img/idea.png" alt="IDEA">
-                                    <img src="./img/xcode.png" alt="Xcode">
-                                    <img src="./img/postman.png" alt="Postman">
-                                    <img src="./img/Docker.png" alt="Docker">
-                                    <img src="./img/git.png" alt="Git">
+                                <img src="./img/sql.png" alt="SQL">
+                                <img src="./img/wordpress.png" alt="WordPress">
+                                <img src="./img/Figma.png" alt="Figma">
+                                <img src="./img/vst.png" alt="Visual Studio">
+                                <img src="./img/idea.png" alt="IDEA">
+                                <img src="./img/xcode.png" alt="Xcode">
+                                <img src="./img/postman.png" alt="Postman">
+                                <img src="./img/Docker.png" alt="Docker">
+                                <img src="./img/git.png" alt="Git">
+                                <img src="./img/androids.png" alt="Android">
+                                <img src="./img/sql.png" alt="SQL">
+                                <img src="./img/wordpress.png" alt="WordPress">
+                                <img src="./img/Figma.png" alt="Figma">
+                                <img src="./img/vst.png" alt="Visual Studio">
+                                <img src="./img/idea.png" alt="IDEA">
+                                <img src="./img/xcode.png" alt="Xcode">
+                                <img src="./img/postman.png" alt="Postman">
+                                <img src="./img/Docker.png" alt="Docker">
+                                <img src="./img/git.png" alt="Git">
                             </div>
                         </div>        
                     </div>
