--- a/pruebas/tarjeta.html
+++ b/pruebas/tarjeta.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
         .section1, .section3{
             height: 100vh;
         }
@@ -28,6 +33,8 @@
             top: 0;
             background-color: blue;
         }
+
+       
     </style>
 </head>
 <body>
@@ -50,31 +57,22 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
   
     <script>
-
         gsap.registerPlugin(ScrollTrigger);
 
-        let card = gsap.utils.toArray(".card");
+        let cards = gsap.utils.toArray(".card");
 
-        card.forEach((card) => {
-            ScrollTrigger.create({
-                trigger: card,
-                start: "top top", 
-                end: "bottom top",
-                pin: true,
-                pinSpacing: false,
-                markers: true,
-                scrub:true,
-                anticipatePin:1
-
-            });
-        });
-
+        cards.forEach((card, i) => {
         ScrollTrigger.create({
-            trigger: ".section2",
-            start: "top", 
-            end: "bottom", 
-            scrub: 3,
-            markers: true, // Marcadores de prueba
+            trigger: card,
+            start: "top top",
+            end: "top bottom",
+            endTrigger: ".section3",
+            pin: true,
+            pinSpacing: false,
+            markers: true,
+            scrub: true,
+            anticipatePin: 1
+        });
         });
     </script>
 
