Info base de datos

--- a/pruebas/tarjeta.html
+++ b/pruebas/tarjeta.html
@@ -183,9 +183,9 @@
             flex-direction: column;
             position: relative; 
             overflow: hidden;
-            align-items: center;
-            
-        
+            margin-bottom:20% ;
+
+            align-items: center;        
         }
 
         .card {
@@ -195,9 +195,13 @@
             position: relative;
             overflow: hidden;
             top: 0;
+            border-radius: 20px;
             background-color: blue;
         }
 
+        .section3{
+            background-color: aquamarine;
+        }
         @media (max-width: 768px) {
             .card {
                 width: 90vw;
