--- a/img/index.html
+++ b/img/index.html
@@ -53,7 +53,7 @@
             <div class="card" id="tarjeta1">
                 <div class="proyectoMapamundi">
                     <div class="imagenMapamundi">
-                        <img src="../img/mapamundi.png" alt="">
+                        <img src="img/mapamundi.png" alt="">
                     </div>
                     <div class="letrasMapamundi">
                         <h1>Mapamundi</h1>
@@ -71,7 +71,7 @@
                         <p></p>
                     </div>
                     <div class="letrasPlansLanding">
-                        <img src="../img/logoPlans.png">
+                        <img src="img/logoPlans.png">
                         <p>Landing web realizado con Html y Css de manera responsive que trata sobre una página de suscribción para ver películas y series</p>
                         <div class="botonesAppyPrototipo">
                             <button>Ver app</button>
