--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <section class="sobreMi" id="sobreMi">
         <h1>¡Hola!</h1>
         <h2>Soy María Sánchez Fernández, especializada en desarrollo de aplicaciones web y móviles</h2>
-        <p>
-            
+        <p>Actualmente estoy formándome en este sector tan amplio del desarrollo de aplicaciones, recogiendo experiencia de diferentes proyectos que me plantean y encuentro. Gracias a esto, me considero una persona eficaz, resolutiva, proactiva y comprometida con el trabajo. 
+        Me adapto rápidamente a nuevos entornos y tecnologías, lo que me permite enfrentarme a cualquier reto que se me proponga. 
         </p>
     
         <h1>Habilidades técnicas</h1>
@@ -194,6 +194,10 @@
             behavior: 'smooth'
         })
     })
+
+    //Cambiar color de la cabecera al pasar por sobreMi Y Contacto
+
+    const cabeceras = document.querySelectorAll('.cabecera');
 
 
     //Botón hover
