--- a/img/index.html
+++ b/img/index.html
@@ -53,7 +53,7 @@
             <div class="card" id="tarjeta1">
                 <div class="proyectoMapamundi">
                     <div class="imagenMapamundi">
-                        <img src="img/mapamundi.png" alt="">
+                        <img src="img/mapamundii.png" alt="">
                     </div>
                     <div class="letrasMapamundi">
                         <h1>Mapamundi</h1>
